# finance-tracker

./: .env.example  .gitignore  Caddyfile  Cargo.toml  LICENSE  README.md
assets/: style.css
src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  templates.rs
src/handlers/: auth.rs  categories.rs  dashboard.rs  mod.rs  profile.rs  transactions.rs
templates/: add_record.html  base.html  categories.html  dashboard.html  edit_record.html  login.html  profile.html  register.html
