[package]
name = "finance_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }
argon2 = "0.5.3"
time = "0.3.47"
tracing-appender = "0.2.4"

[dev-dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["test-util"] }
